Fix dropdown text overflow (#2285)

--- a/src/stylesheets/Components/filter-pill.styl
+++ b/src/stylesheets/Components/filter-pill.styl
@@ -23,7 +23,7 @@
 
 .search__select
   transition: width .1s ease-in-out
-  padding: 0px 10px 2px 10px
+  padding: 0px 25px 2px 10px
   min-width: 60px
   max-width: 200px
   color: $colors.white
@@ -48,12 +48,12 @@
   &:-moz-focusring
     color: transparent
     text-shadow: 0 0 0 $colors.white
-  
+
 
   &:focus::-ms-value
-    background-color: transparent;  
+    background-color: transparent;
     color: $colors.white
-  
+
   option
     color: $colors.text-dark
     background-color: $colors.white
@@ -121,9 +121,9 @@
       cursor: pointer
 
     &:focus::-ms-value
-      background-color: transparent;  
+      background-color: transparent;
       color: $colors.blue-darkest
-    
+
     option
       color: $colors.blue-darkest
       background-color: $colors.white
